--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,28 +3,28 @@ michael:
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
-  activated: true
+  activated: true,
   activated_at: <%= Time.now.zone %>
 
 archer:
   name: Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
-  activated: true
+  activated: true,
   activated_at: <%= Time.now.zone %>
 
 lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password') %>
-  activated: true
+  activated: true,
   activated_at: <%= Time.now.zone %>
 
 malory:
   name: Malory Archer
   email: boss@example.gov
   password_digest: <%= User.digest('password') %>
-  activated: true
+  activated: true,
   activated_at: <%= Time.now.zone %>
 
 <% 30.times do |n| %>
@@ -32,6 +32,6 @@ user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
-  activated: true
+  activated: true,
   activated_at: <%= Time.now.zone %>
 <% end %>
